# redix

./: plugin.toml  pyproject.toml
redix/: __init__.py  cli.py
