[project]
name = "redix"
version = "0.1.0"
description = "ARC provider plugin: Redis/Valkey — cache, locks, pub/sub, rate limiting"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.entry-points."arc.plugins"]
redix = "redix:register"

[project.entry-points."arc.plugins.cli"]
redix = "redix.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redix"]